# invoke-databricks-wheel-tasks

./: .flake8  .gitignore  Jenkinsfile  README.md  poetry.toml  pyproject.toml  tasks.py
.circleci/: config.yml
.github/workflows/: test.yaml
invoke_databricks_wheel_tasks/: __init__.py  tasks.py  utils.py
invoke_databricks_wheel_tasks/utils/: databricks.py  git.py  misc.py  poetry.py
tests/: conftest.py  test_integration.py
tests/example_databricks_project/: README.md  pyproject.toml  tasks.py
tests/example_databricks_project/jobs/: config.yml  template.json.j2
tests/example_databricks_project/projectname/: args.py  core.py  exceptions.py
tests/test_utils/: test_databricks.py  test_git.py  test_merge_template.py  test_misc.py  test_poetry.py
tests/test_utils/fixtures/misc/scenario-jsonconf/: args.env  config.json  output.json  template.json.j2
tests/test_utils/fixtures/misc/scenario-single/: config.yml  output.json
