[tool.poetry]
name = "projectname"
version = "0.1.0"
description = "Example Databricks Wheel"
authors = ["Josh Peak <neozenith.dev@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
main = "projectname:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
invoke-databricks-wheel-tasks = {path = "../../", develop=true} # implicit dependency to always use the version under test

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
