[tool.poetry]
name = "projectname"
version = "0.1.0"
description = "Example Databricks Wheel"
authors = ["Josh Peak <neozenith.dev@gmail.com>"]
license = "MIT"
readme = "README.md"


[tool.poetry.scripts]
main = "projectname:main"


[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
